--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dino Game</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="styles/styles.css" />
+		<script src="scripts/scripts.js" type="module"></script>
 	</head>
 	<body>
-		<div class="world">
-			<div class="score">0</div>
-			<div class="start-screen">Press Any Key To Start</div>
-			<img src="img/ground.png" class="ground" alt="" />
-			<img src="img/ground.png" class="ground" alt="" />
-			<img src="img/dino-stationary.png" class="dino" alt="" />
+		<div class="world" data-world>
+			<div class="score" data-score>0</div>
+			<div class="start-screen" data-start-screen>Press Any Key To Start</div>
+			<img src="img/ground.png" class="ground" alt="" data-ground />
+			<img src="img/ground.png" class="ground" alt="" data-ground />
+			<img src="img/dino-stationary.png" class="dino" alt="" data-dino />
 		</div>
 	</body>
 </html>
